--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node seed.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "clean": "node cleanup.js"
+
   },
   "keywords": [],
   "author": "",
